# MegaPX

./: LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
data/: test.fasta
src/: CMakeLists.txt
src/fm_index_mx/: CMakeLists.txt  fm_index_mx.cpp  fm_index_mx.hpp
src/hibf/: CMakeLists.txt  hibf_util.cpp  hibf_util.hpp
src/main/: CMakeLists.txt  StopClock.hpp  main.cpp  parser.hpp
src/megax_util/: binary_search.hpp  evaluation.hpp  minimiser_hashes.hpp  peptide_simulation.hxx  process_db.cpp  tax_classification.hxx
src/mutate/: CMakeLists.txt  mutate.cpp  mutate.hpp  sequence.hpp
src/seqan3/: CMakeLists.txt  CMakeLists.txt.in
src/test/: test_functions.hxx  test_megaX.hpp
